update for multi query param